deployments/openshift/kustomize/base/kibana/nginx/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
spec:
  to:
    kind: Service
    name: nginx-auth-rp
  port:
    targetPort: 8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
