deployments/openshift/kustomize/base/kibana/nginx/np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress-kibana
spec:
  podSelector:
    matchLabels:
      name: nginx-auth-rp
  ingress:
    - {}
  policyTypes:
    - Ingress
